--- a/ModeloRandomForest.ipynb
+++ b/ModeloRandomForest.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pEIwPN30WMFz"
       },
@@ -47,9 +47,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ald7_tfpwKX",
+        "outputId": "dea51c36-d1aa-45d2-90b4-8497c77a3a69"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Cargar los datos desde un archivo CSV\n",
-        "full_data = '/content/drive/MyDrive/EmotionsOnAudio_Data/New dataAudio/Audios/full_data3.csv'\n",
+        "full_data = '/content/drive/MyDrive/full_data3.csv'\n",
         "emotion_df = pd.read_csv(full_data)\n",
         "\n",
         "# Preparar los datos\n",
@@ -84,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yUTcguG2W3Hn",
-        "outputId": "79a220b5-83dd-448a-9e80-b3afba459571"
+        "outputId": "6acd850b-dc66-4ff4-d02d-c707c25bbc50"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QeA_KP_nXE1-",
-        "outputId": "76a1343f-2789-4d36-a2fa-d44f665af792"
+        "outputId": "3a530619-f0a2-4213-de2e-bcdf6e89d260"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,12 +179,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
+          "height": 100
         },
         "id": "A9fojYhuXKBM",
-        "outputId": "8a34e70b-d480-4d14-d552-d73903631076"
+        "outputId": "cf67eb81-fde8-4227-8874-ad50cecc6af6"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +601,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 15
         }
       ]
     },
@@ -626,9 +650,9 @@
           "height": 1000
         },
         "id": "BD6CzG85be5_",
-        "outputId": "f7947856-0988-4d01-c5a8-3b1c9b48ea07"
+        "outputId": "4fb09a45-a4d6-476a-8d36-4a54f6410d17"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
