Se creó con Colab

--- a/Indicadores_Kawak.ipynb
+++ b/Indicadores_Kawak.ipynb
@@ -34,7 +34,8 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "from google.colab import files"
+        "from google.colab import files\n",
+        "import ast"
       ]
     },
     {
@@ -49,7 +50,7 @@
           "height": 74
         },
         "id": "cltG164oWfuL",
-        "outputId": "bf59a8db-ce59-4d48-c145-23f38cd40eba"
+        "outputId": "3eb745ed-fb8d-4dc4-e8e7-86b3b1e44973"
       },
       "execution_count": 2,
       "outputs": [
@@ -61,9 +62,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-6fafef91-b4bf-4ea3-ba23-a5c2de090788\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-535e4d74-d90f-46c4-bdb8-f2c671dc0c06\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-6fafef91-b4bf-4ea3-ba23-a5c2de090788\">\n",
+              "     <output id=\"result-535e4d74-d90f-46c4-bdb8-f2c671dc0c06\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -251,7 +252,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving consulta_indicadores (3).xlsx to consulta_indicadores (3).xlsx\n"
+            "Saving consulta_indicadores (3).xlsx to consulta_indicadores (3) (1).xlsx\n"
           ]
         }
       ]
@@ -271,9 +272,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Obtener el nombre del archivo cargado\n",
-        "filename = list(uploaded.keys())[0]\n",
-        "\n",
         "# Leer contenido del archivo Excel\n",
         "Reporte_Indicadores = pd.read_excel(filename)\n",
         "\n",
@@ -286,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SsZqq7quWtC0",
-        "outputId": "829e3574-5bed-4b82-bf0e-e46088255e37"
+        "outputId": "5b8c4e6c-a783-4d82-c938-91eb1c35bc49"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,26 +358,44 @@
       "cell_type": "code",
       "source": [
         "# Filtrar campo 'Fecha' y eliminar registros vacíos\n",
-        "Reporte_Indicadores = Reporte_Indicadores.dropna(subset=['fecha'])"
-      ],
-      "metadata": {
-        "id": "lP2guBOuXvBA"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "Reporte_Indicadores = Reporte_Indicadores.dropna(subset=['fecha'])\n",
+        "\n",
         "# Reemplazar '.' por ',' en la columna 'resultado'\n",
         "if 'resultado' in Reporte_Indicadores.columns:\n",
-        "    Reporte_Indicadores['resultado'] = Reporte_Indicadores['resultado'].astype(str).str.replace('.', ',')"
+        "    Reporte_Indicadores['resultado'] = Reporte_Indicadores['resultado'].astype(str).str.replace('.', ',')\n",
+        "\n",
+        "# Ajustar el campo 'clasificacion' reemplazando 'Estrat&eacute;gico' por 'Estratégico'\n",
+        "if 'clasificacion' in Reporte_Indicadores.columns:\n",
+        "    Reporte_Indicadores['clasificacion'] = Reporte_Indicadores['clasificacion'].replace('Estrat&eacute;gico', 'Estratégico')\n"
       ],
       "metadata": {
-        "id": "iS0SLlrhYhbs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lP2guBOuXvBA",
+        "outputId": "cce33362-d50b-4eb2-979b-e69ba75f55af"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-5-4c281c8b86ad>:6: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  Reporte_Indicadores['resultado'] = Reporte_Indicadores['resultado'].astype(str).str.replace('.', ',')\n",
+            "<ipython-input-5-4c281c8b86ad>:10: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  Reporte_Indicadores['clasificacion'] = Reporte_Indicadores['clasificacion'].replace('Estrat&eacute;gico', 'Estratégico')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -388,32 +404,73 @@
         "Serie_Unica = Reporte_Indicadores[Reporte_Indicadores['Tipo'] == 'Serie Unica']\n",
         "\n",
         "# Filtrar registros como 'Multiserie'\n",
-        "Multiserie = Reporte_Indicadores[Reporte_Indicadores['Tipo'] == 'Multiserie']\n",
+        "Multiserie = Reporte_Indicadores[Reporte_Indicadores['Tipo'] == 'Multiserie']"
+      ],
+      "metadata": {
+        "id": "_3PzF7Nalzdm"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dividir la columna 'series' si existe\n",
+        "if 'series' in Multiserie.columns:\n",
+        "    def expand_json(row):\n",
+        "        try:\n",
+        "            series = ast.literal_eval(row)\n",
+        "            if isinstance(series, list):\n",
+        "                data = {}\n",
+        "                for i, item in enumerate(series):\n",
+        "                    data[f'meta_{i+1}'] = item.get('meta', '')\n",
+        "                    data[f'nombre_{i+1}'] = item.get('nombre', '')\n",
+        "                    data[f'resultado_{i+1}'] = item.get('resultado', '')\n",
+        "                    for j, var in enumerate(item.get('variables', [])):\n",
+        "                        data[f'variable_{i+1}_{j+1}'] = var.get('valor', '')\n",
+        "                        data[f'nombre_variable_{i+1}_{j+1}'] = var.get('nombre', '')\n",
+        "                        data[f'simbolo_variable_{i+1}_{j+1}'] = var.get('simbolo', '')\n",
+        "                return pd.Series(data)\n",
+        "        except (ValueError, SyntaxError):\n",
+        "            return pd.Series()\n",
         "\n",
-        "# Guardar los nuevos DataFrames en archivos Excel separados\n",
-        "Serie_Unica.to_excel('Serie_Unica.xlsx', index=False)\n",
-        "Multiserie.to_excel('Multiserie.xlsx', index=False)\n",
+        "    expanded_columns = Multiserie['series'].apply(expand_json)\n",
+        "    Multiserie = pd.concat([Multiserie, expanded_columns], axis=1)\n"
+      ],
+      "metadata": {
+        "id": "p5G_T0t5X8Iv"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Consolidar las dos bases\n",
+        "Consolidado = pd.concat([Serie_Unica, Multiserie], ignore_index=True)\n",
         "\n",
-        "print(\"Nuevo archivo guardado: Reporte_Indicadores_Filtrado.xlsx\")\n",
-        "print(\"Archivo guardado: Serie_Unica.xlsx\")\n",
-        "print(\"Archivo guardado: Multiserie.xlsx\")\n"
+        "# Crear la columna 'llave' concatenando 'ID' y 'Fecha' unidos por '-'\n",
+        "if 'ID' in Consolidado.columns and 'fecha' in Consolidado.columns:\n",
+        "    Consolidado['llave'] = Consolidado['ID'].astype(str) + '-' + Consolidado['fecha'].astype(str)\n",
+        "    Consolidado.insert(0, 'llave', Consolidado.pop('llave'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "p5G_T0t5X8Iv",
-        "outputId": "75ee8447-b2c4-4ac4-97dc-d720cd9c9a31"
+        "id": "x2hSa3WZYpj6",
+        "outputId": "ae3be15c-56a3-4a5b-c322-ad6c08fccf2e"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Nuevo archivo guardado: Reporte_Indicadores_Filtrado.xlsx\n",
-            "Archivo guardado: Serie_Unica.xlsx\n",
-            "Archivo guardado: Multiserie.xlsx\n"
+            "<ipython-input-10-837d1cb38133>:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  Consolidado['llave'] = Consolidado['ID'].astype(str) + '-' + Consolidado['fecha'].astype(str)\n",
+            "<ipython-input-10-837d1cb38133>:7: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+            "  Consolidado.insert(0, 'llave', Consolidado.pop('llave'))\n"
           ]
         }
       ]
@@ -421,78 +478,33 @@
     {
       "cell_type": "code",
       "source": [
-        "print(Reporte_Indicadores.head())\n"
+        "# Guardar los nuevos DataFrames en archivos Excel separados\n",
+        "Serie_Unica.to_excel('Serie_Unica.xlsx', index=False)\n",
+        "Multiserie.to_excel('Multiserie.xlsx', index=False)\n",
+        "Consolidado.to_excel('Consolidado.xlsx', index=False)\n",
+        "\n",
+        "print(\"Nuevo archivo guardado: Reporte_Indicadores_Filtrado.xlsx\")\n",
+        "print(\"Archivo guardado: Serie_Unica.xlsx\")\n",
+        "print(\"Archivo guardado: Multiserie.xlsx\")\n",
+        "print(\"Archivo guardado: Consolidado.xlsx\")"
       ],
       "metadata": {
+        "id": "WNSEe5SXmRQf",
+        "outputId": "ac6025c8-9b24-4e5e-b48f-f9052218fb4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "x2hSa3WZYpj6",
-        "outputId": "c476787f-8abb-4de2-da68-0c29b58d2582"
+        }
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "    ID                                         nombre       clasificacion  \\\n",
-            "0   77       Disponibilidad de servicios tecnológicos  Estrat&eacute;gico   \n",
-            "1  121  Ejecución presupuestal de la nómina acumulada           Operativo   \n",
-            "2  124         Indice de Frecuencia de accidentalidad           Operativo   \n",
-            "3  125                            Indice de severidad           Operativo   \n",
-            "4  128                    Ausentísmo por causa médica           Operativo   \n",
-            "\n",
-            "    sentido                                        proceso  \\\n",
-            "0  Positivo  GESTIÓN DE LA TECNOLOGÍA E INNOVACIÓN DIGITAL   \n",
-            "1  Negativo        GESTIÓN Y DESARROLLO DEL TALENTO HUMANO   \n",
-            "2  Negativo     GESTIÓN DE SEGURIDAD Y SALUD EN EL TRABAJO   \n",
-            "3  Negativo     GESTIÓN DE SEGURIDAD Y SALUD EN EL TRABAJO   \n",
-            "4  Negativo     GESTIÓN DE SEGURIDAD Y SALUD EN EL TRABAJO   \n",
-            "\n",
-            "                                         descripcion  \\\n",
-            "0  Relación disponibilidad servicio infraestructu...   \n",
-            "1  Mide la eficiencia presupuestal de la nómina i...   \n",
-            "2  Mide la cantidad de accidentes que se presenta...   \n",
-            "3  Mide los días perdidos por accidente de trabaj...   \n",
-            "4  mide el % de días programados de trabajo perdi...   \n",
-            "\n",
-            "                                responsable  estado         Tipo       fecha  \\\n",
-            "0   Gerente de Tecnologia E Innovacion Dig.  Activo  Serie Unica  2023-01-31   \n",
-            "1  Director de Admon Laboral y Compensacion  Activo  Serie Unica  2023-01-31   \n",
-            "2                   Bussiness Partner de Th  Activo  Serie Unica  2023-01-31   \n",
-            "3                   Bussiness Partner de Th  Activo  Serie Unica  2023-01-31   \n",
-            "4                   Bussiness Partner de Th  Activo  Serie Unica  2023-01-31   \n",
-            "\n",
-            "   ...        resultado   meta  peligro  alerta  cumplimiento  exceso  \\\n",
-            "0  ...             97,5   97.0    80.00   97.00         100.0     NaN   \n",
-            "1  ...  107,04104854011  102.0   110.00  107.00         102.0   95.00   \n",
-            "2  ...              0,0    1.6     1.95    1.62           1.6    1.59   \n",
-            "3  ...              0,0    4.7     6.50    5.60           4.7    4.60   \n",
-            "4  ...  1,0928581372686    1.0     1.40    1.20           1.0    0.90   \n",
-            "\n",
-            "                                           variables  series  \\\n",
-            "0  [{'valor': 97.5, 'nombre': 'Promedio Disponili...     NaN   \n",
-            "1  [{'valor': 5658983, 'nombre': 'Gasto real nómi...     NaN   \n",
-            "2  [{'valor': 0, 'nombre': 'Numero de accidentes ...     NaN   \n",
-            "3  [{'valor': 1138, 'nombre': 'Numero de trabajad...     NaN   \n",
-            "4  [{'valor': 314, 'nombre': 'Numero de días de a...     NaN   \n",
-            "\n",
-            "                                            analisis  \\\n",
-            "0  2023-04-19 12:02:08 | John Jairo Saavedra Barb...   \n",
-            "1  2023-04-26 13:55:33 | Monica Avendano Duarte |...   \n",
-            "2  2023-02-10 04:15:25 | Miguel Alfredo Herrera M...   \n",
-            "3  2023-02-10 04:17:34 | Miguel Alfredo Herrera M...   \n",
-            "4  2023-10-10 12:09:33 | Miguel Alfredo Herrera M...   \n",
-            "\n",
-            "                                  campos_adicionales  \n",
-            "0  [{'campo': 'Objetivo Estratégico', 'respuesta'...  \n",
-            "1  [{'campo': 'Objetivo Estratégico', 'respuesta'...  \n",
-            "2  [{'campo': 'Objetivo Estratégico', 'respuesta'...  \n",
-            "3  [{'campo': 'Objetivo Estratégico', 'respuesta'...  \n",
-            "4  [{'campo': 'Objetivo Estratégico', 'respuesta'...  \n",
-            "\n",
-            "[5 rows x 23 columns]\n"
+            "Nuevo archivo guardado: Reporte_Indicadores_Filtrado.xlsx\n",
+            "Archivo guardado: Serie_Unica.xlsx\n",
+            "Archivo guardado: Multiserie.xlsx\n",
+            "Archivo guardado: Consolidado.xlsx\n"
           ]
         }
       ]
